[fix] fix search-item overlapping issue in search page

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -439,7 +439,6 @@ input {
 }
 
 .caption {
-    height: 100%;
     width: 100%;
     overflow: hidden;
 }
@@ -503,6 +502,7 @@ input {
 
 .search-item {
   display: inline-block;
+  width: 240px;
   margin: 10px;
 }
 
